--- a/templates/services.html
+++ b/templates/services.html
@@ -36,65 +36,8 @@
                     </div>
                 </div>
                 {% if session['is_staff'] %}
-                <div class="form-box hide" id="{{ service._id }}" value="edit">
-                    <form action="{{ url_for('update_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12">
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <input name="first_name" type="text" class="validate">
-                                <label for="first_name">First Name</label>
-                            </div>
-                            <div class="input-field col s6">
-                                <input name="last_name" type="text" class="validate">
-                                <label for="last_name">Last Name</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input name="_email" type="email" class="validate">
-                                <label for="_email">Email</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input name="password" type="password" class="validate">
-                                <label for="password">Password</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s6">
-                                <input name="type_of_service" type="text" class="validate">
-                                <label for="first_name">Type of Service</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <textarea name="service_description" class="materialize-textarea"></textarea>
-                                <label for="service_description">Service Description</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="input-field col s12">
-                                <input name="_email" type="email" class="validate">
-                                <label for="_email">{{service._email}}</label>
-                            </div>
-                        </div>
-                        <div class="row">
-                            <button class="btn waves-effect waves-light" type="submit">Update Service
-                                <i class="material-icons right">edit</i>
-                            </button>
-                        </div>
-                    </form>
-                </div>
-                <div class="form-box hide" id="{{service._id}}" value="delete">
-                    <form action="{{ url_for('delete_entry', usr_type='services', usr_id=service._id) }}" method="POST" class="col s12 delete-form">
-                        <div class="row">
-                           <h3>Are you sure ou want to delete?</h3>
-                            <button class="btn waves-effect waves-light" type="submit">Yes, Delete
-                                <i class="material-icons right">delete</i>
-                            </button>
-                        </div>
-                    </form>
-                </div>
+                    {% include 'forms/services/edit-service.html' %}
+                    {% include 'forms/services/delete-service.html' %}
                 {% endif %}
             {% endfor %}
         </div>
