Added form modules to stores

--- a/templates/forms/stores/delete-store.html
+++ b/templates/forms/stores/delete-store.html
@@ -1,5 +1,5 @@
-<div class="form-box hide" id="{{dog._id}}" value='delete'>
-    <form action="{{ url_for('delete_entry', usr_type='dogs', usr_id=dog._id) }}" method="POST" class="col s12 delete-form">
+<div class="form-box hide" id="{{store._id}}" value="delete">
+    <form action="{{ url_for('delete_entry', usr_type='stores', usr_id=store._id) }}" method="POST" class="col s12 delete-form">
         <div class="row">
             <h3>Are you sure ou want to delete?</h3>
             <button class="btn waves-effect waves-light" type="submit">Yes, Delete
