--- a/templates/forms/users/register-user.html
+++ b/templates/forms/users/register-user.html
@@ -1,19 +1,43 @@
-<div class="row form-box hide" id="dogs" value="dogs">
-    <form action="{{ url_for('add_entry', usr_type='dogs') }}" method="POST" class="col s12">
+<div class="row form-box hide" id="users" value="users">
+    <form action="{{ url_for('add_entry', usr_type='users') }}" method="POST" class="col s12">
         <div class="row">
             <div class="input-field col s6">
-                <input name="dog_name" type="text" class="validate" required>
-                <label for="dog_name">Name</label>
+                <input name="first_name" type="text" class="validate" required>
+                <label for="first_name">First Name</label>
             </div>
-                <div class="input-field col s6">
-                <input name="dog_breed" type="text" class="validate" required>
-                <label for="dog_breed">Breed</label>
+            <div class="input-field col s6">
+                <input name="last_name" type="text" class="validate">
+                <label for="last_name">Last Name</label>
             </div>
         </div>
         <div class="row">
             <div class="input-field col s12">
-                <textarea name="dog_description" class="materialize-textarea"></textarea>
-                <label for="icon_telephone">Short description</label>
+                <input name="password" type="password" class="validate">
+                <label for="password">Password</label>
+            </div>
+        </div>
+        <div class="row">
+            <div class="input-field col s12">
+                <input name="_email" type="email" class="validate">
+                <label for="_email">Email</label>
+            </div>
+        </div>
+        {% if session['is_staff'] %}
+        <div class="row">
+            <div class="switch">
+                <label>
+                Client
+                <input name="is_staff" type="checkbox" unchecked>
+                <span class="lever"></span>
+                Staff
+                </label>
+            </div>
+        </div>
+        {% endif %}
+        <div class="row">
+            <div class="input-field col s12">
+                <textarea name="user_description" class="materialize-textarea"></textarea>
+                <label for="user_description">Bio</label>
             </div>
         </div>
         <div class="row">
