--- a/templates/register.html
+++ b/templates/register.html
@@ -67,55 +67,8 @@
             {%if existing_user==True%}
                 <h2>This user email is already in the database!</h2>
             {% endif %}
-            <div class="row form-box hide" id="users" value="users">
-                <form action="{{ url_for('add_entry', usr_type='users') }}" method="POST" class="col s12">
-                    <div class="row">
-                        <div class="input-field col s6">
-                            <input name="first_name" type="text" class="validate" required>
-                            <label for="first_name">First Name</label>
-                        </div>
-                        <div class="input-field col s6">
-                            <input name="last_name" type="text" class="validate">
-                            <label for="last_name">Last Name</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input name="password" type="password" class="validate">
-                            <label for="password">Password</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <input name="_email" type="email" class="validate">
-                            <label for="_email">Email</label>
-                        </div>
-                    </div>
-                    {% if session['is_staff'] %}
-                    <div class="row">
-                        <div class="switch">
-                            <label>
-                            Client
-                            <input name="is_staff" type="checkbox" unchecked>
-                            <span class="lever"></span>
-                            Staff
-                            </label>
-                        </div>
-                    </div>
-                    {% endif %}
-                    <div class="row">
-                        <div class="input-field col s12">
-                            <textarea name="user_description" class="materialize-textarea"></textarea>
-                            <label for="user_description">Bio</label>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <button class="btn waves-effect waves-light" type="submit">Create Account
-                            <i class="material-icons right">playlist_add</i>
-                        </button>
-                    </div>
-                </form>
-            </div>
+            {% include 'forms/users/register-user.html' %}
+
             {%if existing_service==True%}
                 <h2>This service email is already in the database!</h2>
             {% endif %}
