--- a/templates/base.html
+++ b/templates/base.html
@@ -13,13 +13,13 @@
 </head>
 
 <body>
-    {% include 'header.html' %}
+    {% include 'components/header.html' %}
     <main>
         {% block content %}
 
         {% endblock %}
     </main>
-    {% include 'footer.html' %}
+    {% include 'components/footer.html' %}
 	<!-- jQueryhere has to go BEFORE Materialize because jQuery needs to be active FIRST -->
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
