--- a/templates/dogs.html
+++ b/templates/dogs.html
@@ -21,7 +21,7 @@
                             <i class="material-icons right card-action-button-icon">favorite</i>
                             <span>Adopt</span>
                         </a>
-                        {% if session['is_staff'] %}
+                        {% if session['is_staff'] == 'is_staff' %}
                         <a id="{{dog._id}}" value="edit" class="waves-effect waves-light btn card-action-button form-trigger">
                             <i class="material-icons right card-action-button-icon">edit</i>
                             <span>Edit</span>
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-                {% if session['is_staff'] %}
+                {% if session['is_staff'] == 'is_staff' %}
                     {% include 'forms/dogs/edit-dog.html' %}
                     {% include 'forms/dogs/delete-dog.html' %}
                 {% endif %}
