--- a/templates/register.html
+++ b/templates/register.html
@@ -9,7 +9,8 @@
         <h2 class="heading-text">Register</h2>
         <p>Choose one of the categories below to choose a type for your account</p>
         <div class="row card-row-register">
-            <div class="col s3">
+             {% if session['is_staff'] == 'is_staff' %}
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Dogs</p>
                     <div class="card-image">
@@ -21,7 +22,8 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            {% endif %}
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">User</p>
                     <div class="card-image">
@@ -33,7 +35,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Services</p>
                     <div class="card-image">
@@ -45,7 +47,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col s3">
+            <div class="col s12 m3">
                 <div class="card">
                     <p class="card-title">Stores</p>
                     <div class="card-image">
@@ -69,12 +71,12 @@
             {% endif %}
             {% include 'forms/users/register-user.html' %}
 
-            {%if existing_service==True%}
+            {%if existing_user==True%}
                 <h2>This service email is already in the database!</h2>
             {% endif %}
             {% include 'forms/services/register-service.html' %}
 
-            {%if existing_store==True%}
+            {%if existing_user==True%}
                 <h2>This store email is already in the database!</h2>
             {% endif %}
             {% include 'forms/stores/register-store.html' %}
