Updated header to display dashboard button

--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -22,15 +22,16 @@
                     <li><a href="{{url_for('get_stores')}}">Stores</a></li> 
                     <div class="row register-box show-on-small-only">
                         {% if not session %}
-                        <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
-                        <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
+                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
+                            <a href="{{url_for('user_login')}}" class="col s12 btn waves-effect general-text nav-action-button">Login</a>
                         {% endif %}
                         {% if session['is_staff'] == 'is_staff' %}
-                        <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
-                        <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
+                            <a href="{{url_for('register')}}" class="col s12 btn waves-effect general-text nav-action-button">Register</a>
+                            <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
                         {% endif %}
                         {% if session['is_staff'] == 'not_staff' %}     
-                        <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
+                            <a href="{{url_for('get_dashboard', usr_id=session['user_id'])}}" class="col s12 btn waves-effect general-text nav-action-button">Dashboard</a>
+                            <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
                         {% endif %}
 
                     </div>
@@ -55,6 +56,7 @@
                 <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
             {% endif %}
             {% if session['is_staff'] == 'not_staff' %}     
+                <a href="{{url_for('get_dashboard', usr_id=session['user_id'])}}" class="btn waves-effect general-text nav-action-button">Dashboard</a>
                 <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
             {% endif %}
             </div>
