--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -30,7 +30,7 @@
                             <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
                         {% endif %}
                         {% if session['is_staff'] == 'not_staff' %}     
-                            <a href="{{url_for('get_dashboard', usr_id=session['user_id'])}}" class="col s12 btn waves-effect general-text nav-action-button">Dashboard</a>
+                            <a href="{{url_for('get_dashboard')}}" class="col s12 btn waves-effect general-text nav-action-button">Dashboard</a>
                             <a href="{{url_for('user_logout')}}" class="col s12 btn waves-effect general-text nav-action-button">Logout</a>
                         {% endif %}
 
@@ -56,7 +56,7 @@
                 <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
             {% endif %}
             {% if session['is_staff'] == 'not_staff' %}     
-                <a href="{{url_for('get_dashboard', usr_id=session['user_id'])}}" class="btn waves-effect general-text nav-action-button">Dashboard</a>
+                <a href="{{url_for('get_dashboard')}}" class="btn waves-effect general-text nav-action-button">Dashboard</a>
                 <a href="{{url_for('user_logout')}}" class="btn waves-effect general-text nav-action-button">Logout</a>
             {% endif %}
             </div>
