Added filter to hide is_staff switch from non staff users

--- a/templates/forms/users/edit-user.html
+++ b/templates/forms/users/edit-user.html
@@ -22,7 +22,7 @@
                 <label for="password">Password</label>
             </div>
         </div>
-        {% if session['is_staff'] %}
+        {% if session['is_staff'] == 'is_staff' %}
         <div class="row">
             <div class="switch">
                 <label>
