--- a/templates/forms/dogs/edit-dog.html
+++ b/templates/forms/dogs/edit-dog.html
@@ -1,4 +1,4 @@
-<div class="form-box hide" id="{{dog._id}}" value='edit'>
+<div class="form-box hide" id="{{dog._id}}" value='adopt'>
     <form action="{{ url_for('update_entry', usr_type='dogs', usr_id=dog._id) }}" method="POST" class="col s12 edit-dog-form">
         <div class="row">
             <div class="input-field col s6">
